--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,10 @@ dj-rest-auth==6.0.0
 Django==5.0.6
 django-allauth==0.63.2
 django-cors-headers==4.3.1
+django-environ==0.11.2
 djangorestframework==3.15.1
 drf-yasg==1.21.7
+gunicorn==22.0.0
 idna==3.7
 inflection==0.5.1
 packaging==24.0
