--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.8.1
+Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 dj-rest-auth==6.0.0
 Django==5.0.6
 django-allauth==0.63.2
@@ -9,6 +12,7 @@ django-environ==0.11.2
 djangorestframework==3.15.1
 drf-yasg==1.21.7
 gunicorn==22.0.0
+h11==0.14.0
 idna==3.7
 inflection==0.5.1
 packaging==24.0
@@ -21,3 +25,5 @@ sqlparse==0.5.0
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+uvicorn==0.30.0
+whitenoise==6.6.0
