--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ h11==0.14.0
 idna==3.7
 inflection==0.5.1
 packaging==24.0
+pillow==10.3.0
 psycopg2-binary==2.9.9
 pytz==2024.1
 PyYAML==6.0.1
@@ -26,4 +27,5 @@ tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 uvicorn==0.30.0
+waitress==3.0.0
 whitenoise==6.6.0
